# ChangeLog for dev-perl/gimp-perl
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/gimp-perl/ChangeLog,v 1.3 2006/01/13 20:54:56 mcummings Exp $

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> gimp-perl-2.0.ebuild:
  Marking stable sparc

  07 Aug 2005; Jason Wever <weeve@gentoo.org> gimp-perl-2.0.ebuild:
  Added ~sparc keyword.

*gimp-perl-2.0 (19 Apr 2005)

  19 Apr 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +gimp-perl-2.0.ebuild:
  Bug 53662, ebuild submitted by Yaakov S <yselkowitz@hotmail.com>, original
  submission by David Brigada <brigad@rpi.edu>
