@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/gimp-perl
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gimp-perl/ChangeLog,v 1.3 2006/01/13 20:54:56 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gimp-perl/ChangeLog,v 1.4 2006/01/15 17:44:02 mcummings Exp $
+
+*gimp-perl-2.2_pre1 (15 Jan 2006)
+
+  15 Jan 2006; Michael Cummings <mcummings@gentoo.org>
+  +gimp-perl-2.2_pre1.ebuild:
+  bug 110971, thanks Peter
 
   13 Jan 2006; Michael Cummings <mcummings@gentoo.org> gimp-perl-2.0.ebuild:
   Marking stable sparc
